<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:id="@+id/fullloginactivity"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/imagejob6">

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:layout_centerInParent="true"
        android:src="@drawable/logoyoungindia"  />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="4"
        android:id="@+id/LinearLayout_userlogin"
        android:layout_marginTop="50dp">
        <com.youngindia.jobportal.fonts.Roboto_Regular
            android:id="@+id/txt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/textColorPrimary"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_weight="1"
            android:textSize="@dimen/lbl_txtsize"/>
        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edt_height"
            android:background="@color/btn_textColor"
            android:layout_weight="2"
            android:layout_marginTop="@dimen/fab_margin"
            android:textSize="@dimen/lbl_txtsize"
            android:singleLine="true"/>
        <com.youngindia.jobportal.fonts.Roboto_Regular
            android:id="@+id/txt_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_psw"
            android:layout_weight="3"
            android:textColor="@color/textColorPrimary"
            android:layout_marginTop="@dimen/fab_margin"
            android:textSize="@dimen/lbl_txtsize"/>
        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edt_height"
            android:background="@color/btn_textColor"
            android:layout_weight="4"
            android:layout_marginTop="@dimen/fab_margin"
            android:singleLine="true"
            android:inputType="text"
            android:password="true" />
        <com.youngindia.jobportal.fonts.Roboto_Regular_Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_login"
            android:layout_marginTop="@dimen/btn_logintopmargin"
            android:background="@drawable/btnshape"
            android:textSize="@dimen/btn_txtsize"
            android:textColor="@color/btn_textColor"/>
        <!--<TextView-->
            <!--android:id="@+id/txt_forget_psw"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textColor="@color/colorAccent"-->
            <!--android:text="Forgot Password ?"-->
            <!--android:layout_marginTop="16dp"-->
            <!--android:layout_marginBottom="@dimen/activity_horizontal_margin"/>-->


    </LinearLayout>

    <Button
        android:id="@+id/txt_newuserregistraation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/btn_textColor"
        android:background="@drawable/btnshape"
        android:text="Registration!!"
        android:layout_marginTop="67dp"
        android:layout_below="@+id/buttonforgotpassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="If you are a New User, then please Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonforgotpassword"
        android:layout_centerHorizontal="true"
        android:textColor="#ff8000"
        android:layout_marginTop="29dp"
        android:id="@+id/textViewnewuser" />

    <TextView
        android:text="JOBBY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="#0080ff"
        android:gravity="center"
        android:layout_marginTop="21dp"
        android:id="@+id/textViewJobby"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="Forgot Password"
        android:textColor="@color/btn_textColor"
        android:background="@drawable/btnshape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonforgotpassword"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/LinearLayout_userlogin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>